src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationFloatAssignString.deca
//Description :
//	affectation d'un string à une variable définie comme float
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : 

{
	float x;
	x = "Hello";
	println(x);
}